--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -97,6 +97,6 @@
         </div>
       </section>
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
