--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="/style/" />
     <link rel="stylesheet" href="/style/style.css" />
     <link rel="stylesheet" href="/style/container.css" />
     <link rel="stylesheet" href="/style/lado esquerdo/lado-esquerdo.css" />
