todos os arquivos dentro de uma unica pasta

--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="/style/" />
-    <link rel="stylesheet" href="/style/style.css" />
-    <link rel="stylesheet" href="/style/container.css" />
-    <link rel="stylesheet" href="/style/lado esquerdo/lado-esquerdo.css" />
-    <link rel="stylesheet" href="/style/lado esquerdo/valor-conta.css" />
-    <link rel="stylesheet" href="/style/lado direito/visor.css" />
-    <link rel="stylesheet" href="/style/lado direito/lado-direito.css" />
-    <link rel="stylesheet" href="/style/lado direito/botao-reset.css" />
-    <link rel="stylesheet" href="/style/lado esquerdo/botoes-tip.css" />
-    <link rel="stylesheet" href="/style/lado esquerdo/pessoas.css" />
+    <link rel="stylesheet" href="style/" />
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/container.css" />
+    <link rel="stylesheet" href="style/lado esquerdo/lado-esquerdo.css" />
+    <link rel="stylesheet" href="style/lado esquerdo/valor-conta.css" />
+    <link rel="stylesheet" href="style/lado direito/visor.css" />
+    <link rel="stylesheet" href="style/lado direito/lado-direito.css" />
+    <link rel="stylesheet" href="style/lado direito/botao-reset.css" />
+    <link rel="stylesheet" href="style/lado esquerdo/botoes-tip.css" />
+    <link rel="stylesheet" href="style/lado esquerdo/pessoas.css" />
 
     <!-- displays site properly based on user's device -->
 
