--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="estilo/style.css" />
-    <link rel="stylesheet" href="estilo/container.css" />
-    <link rel="stylesheet" href="estilo/lado esquerdo/lado-esquerdo.css" />
-    <link rel="stylesheet" href="estilo/lado esquerdo/valor-conta.css" />
-    <link rel="stylesheet" href="estilo/lado direito/visor.css" />
-    <link rel="stylesheet" href="estilo/lado direito/lado-direito.css" />
-    <link rel="stylesheet" href="estilo/lado direito/botao-reset.css" />
-    <link rel="stylesheet" href="estilo/lado esquerdo/botoes-tip.css" />
-    <link rel="stylesheet" href="estilo/lado esquerdo/pessoas.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="container.css" />
+    <link rel="stylesheet" href="lado-esquerdo.css" />
+    <link rel="stylesheet" href="valor-conta.css" />
+    <link rel="stylesheet" href="visor.css" />
+    <link rel="stylesheet" href="lado-direito.css" />
+    <link rel="stylesheet" href="botao-reset.css" />
+    <link rel="stylesheet" href="botoes-tip.css" />
+    <link rel="stylesheet" href="pessoas.css" />
 
     <!-- displays site properly based on user's device -->
 
